--- a/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
@@ -40,7 +40,7 @@
                 <div class="col-md-12">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="tripType">Trip Type</label>
+                            <label for="tripType">Type</label>
                             <select class="form-control" id="tripType" [(ngModel)]="searchParams.tripType">
                                 <option value="NONE">---</option>
                                 <!--<option value="BUSINESS TRIP">BUSINESS TRIP</option>-->
